--- a/.env.example
+++ b/.env.example
@@ -51,15 +51,33 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+# =============================================================================
 # Tableau Server Configuration
-TABLEAU_SERVER=http://103.154.174.60
+# =============================================================================
+
+# URL Tableau Server (tanpa trailing slash)
+TABLEAU_SERVER=http://your-tableau-server.com
+
+# Versi API Tableau (cek dokumentasi Tableau untuk versi yang didukung)
 TABLEAU_API_VERSION=3.8
+
+# Site ID Tableau (kosongkan untuk default site)
 TABLEAU_SITE_ID=
 
-# Tableau REST API credentials (untuk fetch daftar dashboard)
-TABLEAU_ADMIN_USERNAME=
-TABLEAU_ADMIN_PASSWORD=
+# =============================================================================
+# Tableau REST API Credentials
+# Digunakan untuk fetch daftar dashboard dari Tableau Server
+# =============================================================================
+TABLEAU_ADMIN_USERNAME=your_admin_username
+TABLEAU_ADMIN_PASSWORD=your_admin_password
 
-# Tableau Trusted Auth (untuk embed dashboard)
-TABLEAU_VIEWER_USERNAME=
-TABLEAU_DEFAULT_VIEW_PATH=
+# =============================================================================
+# Tableau Trusted Authentication
+# Digunakan untuk embed dashboard tanpa login ulang
+# =============================================================================
+
+# Username viewer untuk Trusted Auth (harus terdaftar di Tableau Server)
+TABLEAU_VIEWER_USERNAME=your_viewer_username
+
+# Default view path jika belum ada menu (format: /views/workbook/sheet)
+TABLEAU_DEFAULT_VIEW_PATH=/views/your_workbook/your_sheet
